# iris

./: pyproject.toml
iris/: servei.py
models/: dt.pck  knn.pck  lr.pck  svm.pck
notebooks/: classificacio.ipynb  client.ipynb
