[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = ["tnavarrete-iedib <tnavarrete@iedib.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
